--- a/chrome/components/one_contextual-menu.css
+++ b/chrome/components/one_contextual-menu.css
@@ -33,11 +33,17 @@ menuseparator {
     }
 }
 
+/* Bug fix: Separator after 'AI menu' causes unwanted scrolling */
+
+:root:not(:has(#context-ask-chat[hidden="true"])) #frame-sep {
+    display: flex !important;
+}
+
 /* Márgenes menú y menú desplegable del menú */
 
 menupopup:not(#PlacesToolbar) menupopup {
     appearance: none !important;
-    margin-block-start: -9px !important;
+    margin-block-start: -6px !important;
     margin-inline-start: -10px !important;
 }
 
@@ -52,71 +58,88 @@ menupopup:not(#PlacesToolbar) menupopup {
     margin-inline-start: -8px !important;
 }
 
-/* Colores generales */
+/* General Styles */
 
-.menupopup-arrowscrollbox {
-    appearance: none !important;
-    background-image: var(--noise-urlbar-personal) !important;
-    background-color: var(--arrowpanel-background, #1c1726) !important; 
-    box-shadow: 0px 0px 0 1px var(--border-contrast-color, #09080d) !important;
-    color: var(--arrowpanel-color, #ffffff) !important;
-    border-color: var(--arrowpanel-border-color) !important;
+menupopup:not(.in-menulist), panel:not(.in-menulist) {
+    --panel-shadow-margin: 1px !important;  /* 1px to draw the external border */
+    --panel-border-radius: 8px !important;  /* Roundness */
+}
+
+menupopup:not(.in-menulist) {    
+    --panel-background: var(--noise-urlbar-personal, transparent), /* Ruido don't apply for rare reason */
+        linear-gradient(var(--arrowpanel-background), var(--arrowpanel-background)) !important;
+    --panel-border-color: var(--arrowpanel-border-color) !important;
+    
+    box-shadow: inset 0px 0px 0 1px var(--border-contrast-color, #09080d) !important;
     border-radius: 8px !important;
+
+    /* Font color in Contextual menus */
+
+    &> menuitem:not([disabled="true"]),
+        &> menu {
+            appearance: none !important;
+            color: var(--arrowpanel-color, var(--lwt-tab-text)) !important;
+    }
+
+    /* Color to 'hover' items */
+
+    &> menuitem:not([disabled="true"]):is(:hover,[_moz-menuactive]),
+        &> menu:is(:hover,[_moz-menuactive]) {
+            appearance: none !important;
+            background-color: var(--button-hover-bgcolor) !important;
+            color: var(--arrowpanel-color, #ffffff) !important;
+    }
+
+    &> menuitem:is([disabled="true"]):hover {
+        appearance: none !important;
+        background: transparent !important;
+    }
+
+    /* Necesario para quitar glitch indeseado al mover el mouse sobre items inhabilitados */
+
+    &> menuitem:is([disabled="true"]),
+        &> menu:is([disabled="true"]) {
+            /*display: none !important;*/
+            appearance: none !important;
+            background-color: transparent !important;
+    }
+    
+    /* color the fondo para items seleccionados con las teclas de dirección */
+
+    & menu:where([_moz-menuactive="true"]:not([disabled="true"])),
+    & menuitem:where([_moz-menuactive="true"]:not([disabled="true"])) {
+            appearance: none !important;
+            background-color: var(--button-active-bgcolor) !important;
+    }
+    
+    
+    /* Mostrar background-color en el item seleccionado */
+
+    &> menuitem:is([selected="true"]):not([disabled="false"]) {
+        appearance: none !important;
+        background-color: var(--button-hover-bgcolor) !important;
+        color: #ffffff !important;
+    }
+
+    &> menuitem:is([selected="true"]):hover:not([disabled="false"]) {
+        appearance: none !important;
+        background-color: var(--button-active-bgcolor) !important;
+    }
 }
 
-/* Font color in Contextual menus */
+/* Necesario para quitar glitch indeseado al mover el mouse sobre items inhabilitados 
 
-menupopup > menuitem:not([disabled="true"]), menupopup > menu {
-    appearance: none !important;
-    color: var(--arrowpanel-color, var(--lwt-tab-text)) !important;
-}
-
-/* Color to :hover items */
-
-menupopup > menuitem:not([disabled="true"]):is(:hover,[_moz-menuactive]), menupopup > menu:is(:hover,[_moz-menuactive]) {
-    appearance: none !important;
-    background-color: var(--button-active-bgcolor) !important;
-    color: white !important;
-}
-
-menupopup > menuitem:is([disabled="true"]):hover {
-    appearance: none !important;
-    background: transparent !important;
-}
-
-/* Necesario para quitar glitch indeseado al mover el mouse sobre items inhabilitados */
-
-menupopup > menuitem:is([disabled="true"]), menupopup > menu:is([disabled="true"]), #context-navigation > menuitem:not([selected="true"]){
-    /*display: none !important;*/
+#context-navigation > menuitem:not([selected="true"]){
     appearance: none !important;
     background-color: transparent !important;
-}
-
-/* color the fondo para items seleccionados con las teclas de dirección */
-
-menu:where([_moz-menuactive="true"]:not([disabled="true"])), menuitem:where([_moz-menuactive="true"]:not([disabled="true"])) {
-    appearance: none !important;
-    background-color: var(--button-active-bgcolor) !important;
-}
-
-/* Mostrar background-color en el item seleccionado */
-
-menupopup > menuitem:is([selected="true"]):not([disabled="false"]) {
-    appearance: none !important;
-    background-color: var(--button-hover-bgcolor) !important;
-    color: #ffffff !important;
-}
-
-menupopup > menuitem:is([selected="true"]):hover:not([disabled="false"]) {
-    appearance: none !important;
-    background-color: var(--button-active-bgcolor) !important;
-}
+}*/
 
 /* Makes context navigation buttons appears as normal textual menuitems */
 
 #context-navigation {
     -moz-box-orient: vertical;
     flex-direction: column !important;
+    color: var(--arrowpanel-color) !important;
 }
 
 #context-navigation > menuitem > .menu-iconic-left {
@@ -133,8 +156,8 @@ menupopup > menuitem:is([selected="true"]):hover:not([disabled="false"]) {
 }
 
 #context-navigation > menuitem[_moz-menuactive="true"]:not([disabled]) {
-    background: var(--button-active-bgcolor) !important;
-    color: #e9e3ff !important;
+    background: var(--button-bgcolor) !important;
+    color: var(--arrowpanel-color) !important;
 }
 
 #context-navigation > menuitem::before {
